2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 6.1.0 => 6.1.1dev.

2012-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: rewrite win32_system.

2012-05-22  Karl Berry  <karl@tug.org>

	* mktexmf: test $name for csso12*, not $rootname.
	From Debian via Norbert, 21 May 2012 10:11:08.

2012-05-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cnf.[ch]: Add KPSEDLL to kpathsea_cnf_get(), and reintroduce
	kpse_cnf_get().
	* Makefile.am: Do install cnf.h.

2012-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (rebuild): Depend on 'all-am' instead of 'all' to
	avoid an infinite loop.

2012-05-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* win32lib.[ch]: Copyright 2012.

2012-05-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: rewrite xftell64 for W32.

2012-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: rewrite xftell64 and xfseek64 for W32.

2012-04-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: further rewrite win32_system().

2012-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (rebuild): Touch libkpathsea.la to avoid an
	infinite loop when only mingw32.h or win32lib.h is changed.

2012-04-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.h, win32lib.c: rewrite win32_system().

2012-04-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmf.cnf: erase "ptexgeneric".

2012-04-16  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFCNF): spell out every directory explicitly,
	so we can include $SELFAUTOPARENT/../texmf-local/web2c.

2012-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cnf.[ch]: Drop KPSEDLL from kpathsea_cnf_get(), and remove
	kpse_cnf_get().
	* db.h: Drop KPSEDLL from kpathsea_db_insert().
	* Makefile.am: Do not install cnf.h.
	* mingw32.h: Add a copyright statement.

	* configure.ac: Subst tex_live_version from ../../version.ac
	as WEB2CVERSION for WIN32 programs.

2012-04-09  Karl Berry  <karl@tug.org>
